--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <vaadin.version>14.4.2</vaadin.version>
 
         <drivers.downloader.phase>pre-integration-test</drivers.downloader.phase>
-    </properties>
+    </properties>f
 
     <repositories>
         <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
